--- a/index.html
+++ b/index.html
@@ -35,13 +35,18 @@
   <div class="container menu">
     <div class="col-md-12">
         <div class="row">
-          <button>New Game</button>
+          <div class="title">
+            <h1>RING OF FIRE</h1>
+          </div>
         </div>
         <div class="row">
-          <button>Rules</button>
+          <button type="button" class="btn btn-default btn-lg">NEW GAME</button>
         </div>
         <div class="row">
-          <button>Info</button>
+          <button type="button" class="btn btn-default btn-lg">RULES</button>
+        </div>
+        <div class="row">
+          <button type="button" class="btn btn-default btn-lg">INFO</button>
         </div>
     </div>
   </div>
