--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- Scripts -->
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.0/less.min.js"></script>
+  <script src="js/menu.js"></script>
   
   <!-- Font import -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -26,12 +27,6 @@
 
 </head>
 <body>
-    
-
-
-
-
-
   <div class="container menu">
     <div class="col-md-12">
         <div class="row">
@@ -46,7 +41,36 @@
           <button type="button" class="btn btn-default btn-lg">RULES</button>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-default btn-lg">INFO</button>
+          <button type="button" class="infoBtn btn btn-default btn-lg">INFO</button>
+        </div>
+    </div>
+  </div>
+
+  <div class="container info">
+    <div class="col-md-12">
+        <div class="row">
+          <div class="title">
+            <h1>a little info..</h1>
+          </div>
+        </div>
+        <div class="row">
+          <p>
+            Hello! <br><br>
+            I love ring of fire, it has to be one of the best drinking games. Though countless times me and my friends have been unable to play as we can't find a pack of cards, the sadness of being unable to down a mixture of 10 diffrent drinks in a dirty pint glass has inspired me to make this.
+            <br>
+            <br>
+            Happy Drinking!
+            <br>
+            <br>
+            Created with <i class="fa fa-heart"></i> and Javascript <br>
+            By <a href="https://twitter.com/chris_vasey">@chris_vasey</a> <br>
+            <a href="http://chrisvasey.com">
+              chrisvasey.com
+            </a>
+          </p>
+        </div>
+        <div class="row">
+          <button type="button" class="back btn btn-default">BACK</button>
         </div>
     </div>
   </div>
