added unformatted rules

--- a/index.html
+++ b/index.html
@@ -35,13 +35,78 @@
           </div>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-default btn-lg">NEW GAME</button>
+          <button type="button" class="gameBtn btn btn-default btn-lg">NEW GAME</button>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-default btn-lg">RULES</button>
+          <button type="button" class="rulesBtn btn btn-default btn-lg">RULES</button>
         </div>
         <div class="row">
           <button type="button" class="infoBtn btn btn-default btn-lg">INFO</button>
+        </div>
+    </div>
+  </div>
+
+  <div class="container rules">
+    <div class="col-md-12">
+        <div class="row">
+          <div class="title">
+            <h1>Rules of Ring of Fire</h1>
+          </div>
+        </div>
+        <div class="row">
+          <p>
+            <br>
+            It is important to remember that everyone has played a different version of this game so the rules may differ from group to group but I am sure you can all come to some kind of agreement. <br>
+            <br>
+            First to set up the game, grab a cup/pan/bowl or any other container that can be used to hold alcohol
+            <br><br>
+            Everyone get a drink and take it in turns to pull a card (or tap a phone screen) then follow the rules depending on what card they pull.
+            <br><br>
+            Before you start the game you must know what each card stands for:
+            <br><br>
+            <li>
+              <ul>
+              A - Waterfall – Everyone must keep drinking until the person who picked the card stops. So who knows how long you will be going for!</ul>
+              <ul>
+              2 - is Choose – You can choose someone to drink</ul>
+              <ul>
+              3 - is Me – You must drink  
+              </ul>
+              <ul>
+              4 - is Whore – All girls drink  
+              </ul>
+              <ul>
+              5 - Thumb Master- When you put your thumb on the table everyone must follow and whomever is last must drink. you are the thumb master till someone else picks a five.  
+              </ul>
+              <ul>
+              6 - is Dicks – All guys drink  
+              </ul>
+              <ul>
+              7 - is Heaven – Point your finger in the sky, whoever is last must drink  
+              </ul>
+              <ul>
+              8 - is Mate – Choose someone to drink with you  
+              </ul>
+              <ul>
+              9 - Rhyme – Pick a word such a dog and the person next to you must rhyme with dog, like log, and it goes to the next person and the next, in a circle, until someone messes up and he or she will have to drink  
+              </ul>
+              <ul>
+              10 - Categories- Pick a category such as card games (It could be a lot more interesting), everyone must go round the circle naming different names of card games. Whoever messes up, drinks.  
+              </ul>
+              <ul>
+              Jack - Make a Rule – You can make up any rule that everyone has to follow, such as you can only drink with your right hand. Everyone (including you) must follow this rule for the whole entire game and if you disobey you must drink.  
+              </ul>
+              <ul>
+              Queen - Question Master – The person who pulled the card is now the question master. If they ask a question and someone else who is playing the game responds, they must drink.  
+              </ul>
+              <ul>
+              King - Pour!- You must pour a little of your drink into the nominated container. Whomever picks up the NEXT king must drink the whole thing, which could be filled with different drinks, so who knows how bad it could taste!  
+              </ul>
+            </li>
+          </p>
+        </div>
+        <div class="row">
+          <button type="button" class="back btn btn-default"><i class="fa fa-arrow-left"></i> BACK</button>
         </div>
     </div>
   </div>
@@ -55,6 +120,7 @@
         </div>
         <div class="row">
           <p>
+            <br>
             Hello! <br><br>
             I love ring of fire, it has to be one of the best drinking games. Though countless times me and my friends have been unable to play as we can't find a pack of cards, the sadness of being unable to down a mixture of 10 diffrent drinks in a dirty pint glass has inspired me to make this.
             <br>
@@ -62,18 +128,20 @@
             Happy Drinking!
             <br>
             <br>
-            Created with <i class="fa fa-heart"></i> and Javascript <br>
             By <a href="https://twitter.com/chris_vasey">@chris_vasey</a> <br>
             <a href="http://chrisvasey.com">
               chrisvasey.com
-            </a>
+            </a><br>
+            Created with <i class="fa fa-heart"></i> and Javascript <br>
           </p>
         </div>
         <div class="row">
-          <button type="button" class="back btn btn-default">BACK</button>
+          <button type="button" class="back btn btn-default"><i class="fa fa-arrow-left"></i> BACK</button>
         </div>
     </div>
   </div>
+
+
 
 
 
