--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
     </div>
   </div>
 
+  <div class="container game">
+    <div class="col-md-12">
+        <div class="row">
+          
+        </div>
+        <div class="row">
+          <button type="button" class="back btn btn-default"><i class="fa fa-arrow-left"></i> BACK</button>
+        </div>
+    </div>
+  </div>
+
+
   <div class="container rules">
     <div class="col-md-12">
         <div class="row">
