added intial card generator

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="btnWrap">
           <div class="row">
             <div class="col-md-12">
-              <button type="button" class="nextBtn btn btn-default">PULL NEXT CARD</button>  
+              <button onclick="cardPull()" type="button" class="nextBtn btn btn-default">PULL NEXT CARD</button>  
             </div>
             <div class="col-md-12">
               
