Bug fixed image file names and made card clickable

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="container game">
     <div class="col-md-12">
         <div class="row">
-          <div class="card">
+          <div onclick="cardPull()" class="card">
             <!-- CARD SHOWN HERE -->
           </div>
         </div>
