made some cosmetic changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <!-- Font import -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
   <!-- Favicon -->
   <!-- <link rel="shortcut icon" href="#" type="image/vnd.microsoft.icon" />
@@ -32,7 +32,7 @@
     <div class="col-md-12">
         <div class="row">
           <div class="title">
-            <h1>RING OF FIRE</h1>
+            <h1>Ring of Fire</h1>
           </div>
         </div>
         <div class="row">
@@ -89,25 +89,25 @@
             It is important to remember that everyone has played a different version of this game so the rules may differ from group to group but I am sure you can all come to some kind of agreement. <br>
             <br>
             First to set up the game, grab a cup/pan/bowl or any other container that can be used to hold alcohol
-            <br><br>
+            <br>
             Everyone get a drink and take it in turns to pull a card (or tap a phone screen) then follow the rules depending on what card they pull.
-            <br><br>
+            <br>
             Before you start the game you must know what each card stands for:
             <br><br>
             <li>
               <ul>
-                <span>A - Waterfall.</span><br>
+                <span>Ace - Waterfall.</span><br>
                 Everyone must keep drinking until the person who picked the card stops. So who knows how long you will be going for!
               </ul>
               <ul>
-                <span>2 - is Choose</span><br>
+                <span>2 - You (choose)</span><br>
                 You can choose someone to drink</ul>
               <ul>
-                <span>3 - is Me</span><br>
+                <span>3 - Me</span><br>
                 You must drink  
               </ul>
               <ul>
-                <span>4 - is Whore</span><br>
+                <span>4 - Whores</span><br>
                 All girls drink  
               </ul>
               <ul>
@@ -115,15 +115,15 @@
                 When you put your thumb on the table everyone must follow and whomever is last must drink. you are the thumb master till someone else picks a five.  
               </ul>
               <ul>
-                <span>6 - is Dicks</span><br>
+                <span>6 - Dicks</span><br>
                 All guys drink  
               </ul>
               <ul>
-                <span>7 - is Heaven</span><br>
+                <span>7 - Heaven</span><br>
                 Point your finger in the sky, whoever is last must drink  
               </ul>
               <ul>
-                <span>8 - is Mate</span><br>
+                <span>8 - Mate</span><br>
                 Choose someone to drink with you  
               </ul>
               <ul>
@@ -152,8 +152,8 @@
             <br><br>
             NOTE: These are just the rules I have always played. If you have any suggestions then feel free to get in touch, my contact details are on the info page.
             <br><br>
-            Rules adapted from <a href="http://www.ringoffirerules.com/">here</a>
-            <br><br>
+            <!-- Rules adapted from <a href="http://www.ringoffirerules.com/">here</a>
+            <br><br> -->
           </p>
         </div>
         <div class="row">
@@ -172,18 +172,21 @@
         <div class="row">
           <p>
             <br>
+            <br>
             Hello! <br><br>
-            I love ring of fire, it has to be one of the best drinking games. Though countless times my friends and I have been unable to play as we can't find a pack of cards, the sadness of being unable to down a mixture of 10 different drinks in a dirty pint glass has inspired me to make this.
+            I love ring of fire, it has to be one of the best drinking games, though countless times my friends and I have been unable to play because we can't find a pack of cards. The sadness of being unable to down a mixture of 10 different spirits in a dirty pint glass has inspired me to make this.
             <br>
             <br>
             Happy Drinking!
             <br>
             <br>
+          </p>
+          <p id="foot">
             By <a href="https://twitter.com/chris_vasey">@chris_vasey</a> <br>
             <a href="http://chrisvasey.com">
               chrisvasey.com
             </a><br>
-            Created with <i class="fa fa-heart"></i> and Javascript <br>
+            Made with <i class="fa fa-heart"></i> and Javascript <br>
           </p>
         </div>
         <div class="row">
