Added facebook share stuff and favicon

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
   <!-- Favicon -->
-  <!-- <link rel="shortcut icon" href="#" type="image/vnd.microsoft.icon" />
-  <link rel="icon" href="#" type="image/vnd.microsoft.icon" />  -->
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/vnd.microsoft.icon" />
+  <link rel="icon" href="images/favicon.ico" type="image/vnd.microsoft.icon" />
+
+  <!-- Facebook Share stuff -->
+  <meta property="og:image" content="images/icon.png" />
+  <meta property="og:title" content="Ring of Fire" />
+  <meta property="og:description" content="Ring of Fire Online Drinking Game"/> 
 
 </head>
 <body>
@@ -56,7 +61,7 @@
         </div>
         <div class="row">
           <div class="cardCount col-md-12">
-            <p>Number of cards left: <span>0</span></p>
+            <!-- <p>WARNING CURRENTLY UNLIMITED GAME</p> -->
           </div>
         </div>
         <div class="btnWrap">
