added MA to credits and added github link in footer

--- a/index.html
+++ b/index.html
@@ -205,11 +205,13 @@
             </p>
 
             <p id="foot">
-                By <a href="https://twitter.com/chris_vasey">@chris_vasey</a> <br>
+                Made with <i class="fa fa-heart"></i> and Javascript <br>
+                By <a href="https://twitter.com/chris_vasey">@chris_vasey</a> &amp; <a href="https://twitter.com/mjanthony1995">@mjanthony1995</a>  <br>
                 <a href="http://chrisvasey.com">
                     chrisvasey.com
                 </a><br>
-                Made with <i class="fa fa-heart"></i> and Javascript <br>
+                <a href="https://github.com/chrisvasey/ringOfFire"><i class="fa fa-github fa-2x"></i></a>
+                <br>
             </p>
         </div>
         <div class="row">
